--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,4 +1,5 @@
 .popup_opened {
+    transition: opacity 1s ease-in-out 0s, visibility 0s ease-in 0s;
     visibility: visible;
     opacity: 1;
 }
